package com.brkyzdmr.designpatterns.creational.abstractfactory;

public interface Scope {
    public void zoom();
    public void test();
}
