@startuml

title __DESIGNPATTERNS's Class Diagram__\n

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    class AbstractFactoryClient {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    class Ak47Factory {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    class Ak47Magazine {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    class Ak47Scope {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    abstract class Factory {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    class M4a1Factory {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    class M4a1Magazine {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    class M4a1Scope {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    interface Magazine {
    }
  }
  

  package com.brkyzdmr.designpatterns.creational.abstractfactory {
    interface Scope {
    }
  }
  

  Ak47Factory -up-|> Factory
  Ak47Magazine -up-|> Magazine
  Ak47Scope -up-|> Scope
  M4a1Factory -up-|> Factory
  M4a1Magazine -up-|> Magazine
  M4a1Scope -up-|> Scope


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
